# adventofcode2019

./: .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
aoc2019-golang/: aoc2019.go  go.mod
aoc2019-golang/cmd/: fuel.go  root.go
aoc2019-golang/fuel/: module.go  module_test.go  ship.go  ship_test.go
src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  intcode.rs  lib.rs  main.rs  options.rs  util.rs
